--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -13,4 +13,5 @@ html {
 
 body {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
