--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -1,9 +1,13 @@
 $color-black: rgba(#000, 1);
 
-$font-size-large: 60rem;
-$font-size-medium: 40rem;
-$font-size-small: 30rem;
-$font-size-xsmall: 20rem;
+$font-size-header-large: 60rem;
+$font-size-header-medium: 40rem;
+$font-size-header-small: 30rem;
+$font-size-header-xsmall: 20rem;
+
+$font-size-interactive-large: 3rem;
+$font-size-interactive-medium: 2.5rem;
+$font-size-interactive-small: 2.2rem;
 
 $media-screen-medium: 1050px;
 $media-screen-small: 700px;
