--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -7,13 +7,14 @@
         height: inherit;
         align-items: flex-end;
         justify-content: flex-end;
-        font-size: $font-size-large;
+        font-size: $font-size-header-large;
         font-weight: 100;
 
         &__attribute {
             margin: 2rem;
+            text-transform: uppercase;
             background-image: linear-gradient(to bottom, $color-black 33%, transparent 33%);
-            background-position: 0 ($font-size-large + 1);
+            background-position: 0 ($font-size-header-large + 1);
             background-repeat: repeat-x;
             background-size: 1px 1.5rem;
         }
@@ -22,30 +23,30 @@
 
 @media only screen and (max-width: $media-screen-medium) {
     .header__landing {
-        font-size: $font-size-medium;
+        font-size: $font-size-header-medium;
 
         &__attribute {
-            background-position: 0 ($font-size-medium + 1);
+            background-position: 0 ($font-size-header-medium + 1);
         }
     }
 }
 
 @media only screen and (max-width: $media-screen-small) {
     .header__landing {
-        font-size: $font-size-small;
+        font-size: $font-size-header-small;
 
         &__attribute {
-            background-position: 0 ($font-size-small + 1);
+            background-position: 0 ($font-size-header-small + 1);
         }
     }
 }
 
 @media only screen and (max-width: $media-screen-xsmall) {
     .header__landing {
-        font-size: $font-size-xsmall;
+        font-size: $font-size-header-xsmall;
 
         &__attribute {
-            background-position: 0 ($font-size-xsmall + 1);
+            background-position: 0 ($font-size-header-xsmall + 1);
         }
     }
 }
