--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -13,5 +13,6 @@ html {
 
 body {
     box-sizing: border-box;
+    padding: 1rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
