adding images and colors to landing page

--- a/src/css/components/_card.scss
+++ b/src/css/components/_card.scss
@@ -2,7 +2,7 @@
     width: 50vw;
     height: 20vh;
     margin: 1rem;
-    background-color: orangered;
+    background-color: darken(rgba(#F3EBE5, .75), 10%);
 
     font-size: $font-size-interactive-large;
     padding: 1rem;
