--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -1,7 +1,16 @@
 
 .header {
     height: 100vh;
-
+    background-image:
+        linear-gradient(
+                 to bottom right,
+                 darken(rgba(#C4AAAA, 1), 50%),
+                 darken(rgba(#C4AAAA, 0.4), 50%)
+             ),
+        url('../assets/header_bg.jpg');
+    color: $color-white;
+    clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+    
     &__landing {
         display: flex;
         height: inherit;
@@ -13,7 +22,7 @@
         &__attribute {
             margin: 2rem;
             text-transform: uppercase;
-            background-image: linear-gradient(to bottom, $color-black 33%, transparent 33%);
+            background-image: linear-gradient(to bottom, $color-white 33%, transparent 33%);
             background-position: 0 ($font-size-header-large + 1);
             background-repeat: repeat-x;
             background-size: 1px 1.5rem;
@@ -33,6 +42,7 @@
 
 @media only screen and (max-width: $media-screen-small) {
     .header__landing {
+        padding-bottom: 5rem;
         font-size: $font-size-header-small;
 
         &__attribute {
