--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,5 +1,13 @@
 .section_interactive_graph {
     height: 100vh;
+    margin-top: -10rem;
+    background-image:
+        linear-gradient(
+            to right bottom,
+            darken(rgba(#D6C0AF, 1), 50%),
+            darken(rgba(#D6C0AF, 0.8), 100%)
+        ),
+        url(../assets/bottle-caps.jpg);
 
     &__container {
         float: left;
@@ -13,8 +21,12 @@
         justify-content: center;
         align-items: center;
 
-        & > i:hover {
-            cursor: pointer;
+        & > i {
+            color: $color-white;
+            &:hover {
+                cursor: pointer;
+            }
         }
+        
     }
 }
