--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -22,6 +22,7 @@
         align-items: center;
 
         & > i {
+            font-size: $font-size-interactive-large;
             color: $color-white;
             &:hover {
                 cursor: pointer;
