--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -3,9 +3,9 @@
     margin-top: -10rem;
     background-image:
         linear-gradient(
-            to right bottom,
-            darken(rgba(#D6C0AF, 1), 50%),
-            darken(rgba(#D6C0AF, 0.8), 100%)
+            to bottom right,
+            darken(rgba(#C4AAAA, 1), 50%),
+            darken(rgba(#C4AAAA, 0.4), 50%)
         ),
         url(../assets/bottle-caps.jpg);
 
@@ -22,7 +22,7 @@
         align-items: center;
 
         & > i {
-            font-size: $font-size-interactive-large;
+            font-size: $icon-size;
             color: $color-white;
             &:hover {
                 cursor: pointer;
@@ -34,4 +34,56 @@
 
 .section_continue_search {
     height: 95vh;
+    margin-top: -3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image:
+        linear-gradient(
+            to bottom right,
+            darken(rgba(#C4AAAA, 1), 50%),
+            darken(rgba(#C4AAAA, 0.4), 50%)
+        ),
+        url(../assets/cans.jpg);
+    
+    color: $color-white;
+
+    &__title {
+        font-size: $font-size-continue_search-large;
+        font-weight: 100;
+    }
+
+    &__search {
+        display: flex;
+
+        &__basic-search {
+            padding: 1rem;
+        }
+
+        &__filter-search {
+            &--aside,
+            &--bside {
+                padding: 1rem;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: $media-screen-medium) {
+    .section_continue_search__title {
+        font-size: $font-size-continue_search-medium;
+    }
+}
+
+@media only screen and (max-width: $media-screen-small) {
+    .section_continue_search__title {
+        font-size: $font-size-continue_search-small;
+    }
+}
+
+@media only screen and (max-width: $media-screen-xsmall) {
+    .section_continue_search__title {
+        font-size: $font-size-continue_search-xsmall;
+    }
 }
