--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,6 +1,5 @@
 .section_interactive_graph {
     height: 100vh;
-    margin-top: -10rem;
     background-image:
         linear-gradient(
             to bottom right,
@@ -20,9 +19,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0 2rem;
 
         & > i {
             font-size: $icon-size;
+            font-weight: 700;
             color: $color-white;
             &:hover {
                 cursor: pointer;
@@ -33,8 +34,7 @@
 }
 
 .section_continue_search {
-    height: 95vh;
-    margin-top: -3rem;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,6 +56,7 @@
 
     &__search {
         display: flex;
+        padding: 2rem;
 
         &__basic-search {
             padding: 1rem;
@@ -67,6 +68,22 @@
                 padding: 1rem;
             }
         }
+    }
+}
+
+.search-by-attribute {
+    display: inline-block;
+    padding: 1rem;
+
+    &__attribute {
+        padding: .5rem;
+        font-size: 2rem;
+    }
+
+    &__input > input::-webkit-inner-spin-button,
+    &__input > input::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
     }
 }
 
