--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -1,4 +1,9 @@
 .button {
+    position: relative;
+    display: flex;
+    background-color: darken(rgba(#F3EBE5, 1), 35%);
+    height: 8rem;
+    min-width: 8rem;
     border: .2rem solid $color-white;
     border-radius: .3rem;
     padding: 1.5rem;
