--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -1,6 +1,7 @@
 
 .header {
     height: 100vh;
+    width: 100vw;
     background-image:
         linear-gradient(
                  to bottom right,
