--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,6 +1,96 @@
-.landing {
-    display: inline-flex;
+.nav {
+    &__item {
+
+        display: flex;
+        height: 6rem;
+        align-items: center;
+        padding: 2rem;
+
+        a:link,
+        a:visited {
+            color: $color-black;
+            text-decoration: none;
+            white-space: nowrap;
+            transition: all 0.4s;
+            position: relative;
+
+            &:before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 3.5rem;
+                bottom: 0;
+                left: 0;
+                background-color: rgba($color-black, .2);
+                visibility: hidden;
+                transform: scaleX(0);
+                transition: all 0.4s ease-in-out 0s;
+            }
+
+            &:hover {
+                color: $color-black;
+                &:before {
+                    visibility: visible;
+                    transform: scaleX(1);
+                }
+            }
+        }
+    }
 }
+
+.menu {
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 2rem;
+    display: inline-block;
+    transition: all 0.4s;
+    cursor: pointer;
+
+    & > .content {
+        opacity: 0;
+        font-size: 3rem;
+        transition: all 0.4s;
+    }
+
+    & > .bar_a,
+    & > .bar_b,
+    & > .bar_c {
+        width: 3.5rem;
+        height: .5rem;
+        background-color: $color-white;
+        margin: .6rem 0;
+        transition: all 0.4s;
+    }
+
+    &.cancel {
+        background-color: rgba($color-black, .6);
+        width: 100vw;
+        height: 100vh;
+
+        & > .content {
+            opacity: 1;
+            background-color: $color-white;
+            width: 30vw;
+            height: 28vh;
+            padding: .5rem;
+            margin: 1rem;
+            transition: all 0.4s;
+        }
+
+        & > .bar_a {
+            transform: rotate(-45deg) translate(-.9rem, .6rem);
+            background-color: rgba(177, 0, 0, 0.637)
+        }
+        & > .bar_b { opacity: 0; }
+        & > .bar_c {
+            transform: rotate(45deg) translate(-.8rem, -.7rem);
+            background-color: rgba(177, 0, 0, 0.637)
+        }
+    }
+}
+
 
 .section_interactive_graph {
     height: 100vh;
@@ -24,7 +114,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 2rem;
+        padding: 0 1rem;
 
         & > i {
             font-size: $icon-size;
@@ -100,16 +190,28 @@
     .section_continue_search__title {
         font-size: $font-size-continue_search-medium;
     }
+
+    &.cancel > .content {
+        font-size: 2.2rem;
+    }
 }
 
 @media only screen and (max-width: $media-screen-small) {
     .section_continue_search__title {
         font-size: $font-size-continue_search-small;
     }
+
+    &.cancel > .content {
+        font-size: 1.2rem;
+    }
 }
 
 @media only screen and (max-width: $media-screen-xsmall) {
     .section_continue_search__title {
         font-size: $font-size-continue_search-xsmall;
+    }
+
+    &.cancel > .content {
+        font-size: 1rem;
     }
 }
